  including collapsing inserts down into the multi-value form if possible.
. Added MySqlScript class for executing scripts against a database.
. Marked connection string option 'Use Old Syntax' as obsolete and changed code to 
  allow both @ and ? as paramter markers.
. Finished MySqlBulkLoader class
. BINARY(16) columns are now returned as Guid objects

Version 5.1.4 - 11/12/2007
  - Fixed issue where column name metadata was not using the charset given on the connection string
    (Bug #31185)
  - Fixed problem where closing the connection before the reader where the reader was
    opened with CloseConnection would cause a object disposed exception to be thrown
  - Fixed problem with installer where the installation would fail if the performance
    counter categories had already been removed for some reason      
  - Fixed problem with attempting to use a command with a connection that is not open.
    The problem was caused by the introduction of the internal method SoftClosed that is
    used with transactions.  (Bug #31262)      
  - Fixed problem where attempting to enlist in a distributed transaction would succeed
    even though Connector/Net doesn't currently support that. (Bug #31703)
  - Fixed problem with web providers not being usable on medium trust systems      
  - Fixed problem with installer where attempting to install over a failed uninstall could 
    leave multiple clients registered in machine.config.  (Bug #31731)      
  - Marked MySqlDbType.Datetime obsolete; replaced with DateTime (just corrected capitalization) (Bug #26344)
  - fixed code where we were returning bit(1) as boolean but mysql treats tinyint(1) as boolean
    (bug #27959)
  - Added the Default Command Timeout connection string option to allow DDEX users to set
    an initial command timeout for very large databases (bug #27958)      
      
Version 5.1.3 - 9/19/2007
  - Fixed problem with using a stored procedure that takes a parameter as a select routine